--- a/Sounds-of-india.html
+++ b/Sounds-of-india.html
@@ -289,18 +289,19 @@
                 class="flex items-center text-slate-500 dark:text-slate-400 hover:text-white cursor-pointer transition-colors pl-6 text-sm sm:text-base">
                 <a href="service.html"> Alive India in Concert</a>
               </li>
+              <li
+                class="flex items-center text-slate-500 dark:text-slate-400 hover:text-white cursor-pointer transition-colors pl-6 text-sm sm:text-base">
+                <a href="service.html">  Band E Mataram</a>
+              </li>
 
               <li class="flex items-center text-white font-semibold cursor-pointer text-sm sm:text-base">
-                <a href="Band-E-Mataram.html">
+                <a href="Sounds-of-india.html">
                   <span class="material-icons text-sm mr-2">play_arrow</span>
-                  <span class="underline underline-offset-4 decoration-white">Band E Mataram</span>
+                  <span class="underline underline-offset-4 decoration-white">Sounds of India</span>
                 </a>
               </li>
 
-              <li
-                class="flex items-center text-slate-500 dark:text-slate-400 hover:text-white cursor-pointer transition-colors pl-6 text-sm sm:text-base">
-                Sounds of India
-              </li>
+           
               <li
                 class="flex items-center text-slate-500 dark:text-slate-400 hover:text-white cursor-pointer transition-colors pl-6 text-sm sm:text-base">
                 Get Alive Nights
@@ -336,10 +337,10 @@
             <div>
               <h1
                 class="text-display text-3xl sm:text-4xl lg:text-6xl text-slate-900 dark:text-white mt-3 sm:mt-4 font-extrabold">
-                Band-E-Matram
+                Sounds of India
               </h1>
               <p class="text-slate-500 dark:text-slate-400 text-lg sm:text-xl lg:text-2xl mt-2 font-light">
-                War ground for bands
+                Bringing Entire Nation’s Music To You
               </p>
             </div>
             <div class="flex flex-wrap gap-4 sm:gap-6 items-center">
@@ -366,51 +367,47 @@
             class="grid grid-cols-1 md:grid-cols-2 gap-6 sm:gap-10 text-slate-600 dark:text-slate-300 leading-relaxed text-sm sm:text-base">
             <div class="space-y-3 sm:space-y-4">
               <p>
-                The Ultimate Youth Festival IP, Band-E-Mataram is more than just a music festival, it’s a movement that
-                gives college and corporate bands their biggest platform to showcase talent and claim their rightful
-                spotlight.
+                Unearth the soul-stirring diversity of India's folk music! From the rhythmic beats echoing through vibrant harvest festivals to the poignant melodies narrating timeless tales, India's folk traditions are a living, breathing testament to its varied landscapes and cultures. Sounds of India, a dynamic musical IP by Alive India, throws open a portal to this captivating world. 
               </p>
-              <p>
-                Brimming with youth and energy, these battles are the best place to reach your potential customers and
-                leave a mark on their memory through an unforgettable pulse of energy
-              </p>
+
             </div>
             <div class="space-y-3 sm:space-y-4">
               <p>
-                As Alive India’s flagship Youth Festival, Band-E-Mataram offers a stage where creativity thrives and
-                dreams come alive. It bridges the gap between emerging talent and national recognition. Through this
-                iconic festival, young bands find not just an audience but also an opportunity to rise, shine, and leave
-                their mark on the Indian music landscape.
+                We're not just archiving; we're igniting stages and airwaves with electrifying performances that bridge the gap between tradition and contemporary audiences. Experience the raw energy and intricate beauty of these art forms as Alive India champions these unsung musical treasures, bringing them vibrantly to the forefront for all to discover and celebrate.
               </p>
             </div>
           </section>
 
-
+<section class="py-4 sm:py-6">
+              <h2 class="text-display text-2xl sm:text-3xl lg:text-5xl text-slate-900 dark:text-white font-extrabold leading-tight">
+                Connecting <span class="text-accent">Communities.</span><br>
+                Through the <span class="text-accent">Universal Language of Music.</span>
+              </h2>
+            </section>
 
           <section class="grid grid-cols-1 sm:grid-cols-3 gap-4 sm:gap-6">
             <div
               class="gradient-border-pink rounded-xl p-6 sm:p-8 flex flex-col items-center justify-center text-center space-y-2 group hover:scale-[1.02] transition-transform">
               <span
-                class="text-display text-4xl sm:text-5xl text-slate-900 dark:text-white font-black tracking-tight">10
-                CR</span>
+                class="text-display text-4xl sm:text-5xl text-slate-900 dark:text-white font-black tracking-tight">24</span>
               <p class="text-slate-500 dark:text-slate-400 font-bold uppercase text-xs tracking-widest">
-                Youth reached
+                Folk music styles
               </p>
             </div>
             <div
               class="gradient-border-pink-orange rounded-xl p-6 sm:p-8 flex flex-col items-center justify-center text-center space-y-2 group hover:scale-[1.02] transition-transform">
               <span
-                class="text-display text-4xl sm:text-5xl text-slate-900 dark:text-white font-black tracking-tight">45</span>
+                class="text-display text-4xl sm:text-5xl text-slate-900 dark:text-white font-black tracking-tight">51</span>
               <p class="text-slate-500 dark:text-slate-400 font-bold uppercase text-xs tracking-widest">
-                bands found their fam
+                Regional artists invited
               </p>
             </div>
             <div
               class="gradient-border-pink-orange rounded-xl p-6 sm:p-8 flex flex-col items-center justify-center text-center space-y-2 group hover:scale-[1.02] transition-transform">
               <span
-                class="text-display text-4xl sm:text-5xl text-slate-900 dark:text-white font-black tracking-tight">125</span>
+                class="text-display text-4xl sm:text-5xl text-slate-900 dark:text-white font-black tracking-tight">175</span>
               <p class="text-slate-500 dark:text-slate-400 font-bold uppercase text-xs tracking-widest">
-                rocking shows
+                Live performances
               </p>
             </div>
           </section>
@@ -419,7 +416,7 @@
           <section class="space-y-12 sm:space-y-20">
             <div>
               <h2 class="text-lg sm:text-xl md:text-2xl font-light text-gray-600 dark:text-gray-400 mb-4 sm:mb-6">
-                Band-E-Mataram Showreel
+                Sounds of India Showreel
               </h2>
               <div class="relative group cursor-pointer overflow-hidden rounded-sm shadow-2xl">
                 <div class="aspect-video w-full overflow-hidden bg-zinc-900">
@@ -438,103 +435,14 @@
               </div>
             </div>
 
-            <!-- <div>
-                <h2
-                  class="text-lg sm:text-xl md:text-2xl font-light text-gray-600 dark:text-gray-400 mb-6 sm:mb-10"
-                >
-                  Concert Formats
-                </h2>
-                <div class="grid grid-cols-1 md:grid-cols-2 gap-6 sm:gap-8">
-                  <div class="flex flex-col group cursor-pointer">
-                    <div class="aspect-[16/10] overflow-hidden">
-                      <img
-                        alt="Massive mega concert with red lighting and large crowd"
-                        class="w-full h-full object-cover grayscale-[20%] group-hover:grayscale-0 transition-all duration-500"
-                        src="https://lh3.googleusercontent.com/aida-public/AB6AXuBtIBpPRmMXom60tsea2l--m5fgcPumeJop10vi29Omuy-erhbX3APHJ9JwsyTvReapYwa21ryG830aTEPNULoAv6CLQ-bkxfEQrG9vmhC7dbYA8m34_DumtWak7dKHx1qNfsoT8g_sxoa_dJUaLe-QFgOrFAaQl1zyPoDgPQY6Ek96MQDmEXB8LvMsMD0HjPXRqqGxQdFR08_hi3TfAriJHCXOQshmwmf0mPF3YLf_nQaUae1muRcXKBl0_UWRx5ddmUjWE8c3lNw"
-                      />
-                    </div>
-                    <div
-                      class="bg-primary p-4 sm:p-6 flex items-center justify-between"
-                    >
-                      <span class="text-white text-base sm:text-lg md:text-xl font-medium"
-                        >Mega Concerts</span
-                      >
-                      <span class="material-icons text-white">expand_more</span>
-                    </div>
-                  </div>
-                  <div class="flex flex-col group cursor-pointer">
-                    <div class="aspect-[16/10] overflow-hidden">
-                      <img
-                        alt="Intimate concert setting with musicians on stage and blue lighting"
-                        class="w-full h-full object-cover transition-all duration-500"
-                        src="https://lh3.googleusercontent.com/aida-public/AB6AXuCCY0gJ6gNIxBSH5xPWNP2zvHp7OkL_9_ccaKCtil7NJZBbGCGOvypV7mQ7hi_2sOk5MKV5--xP-5fDIWN1SkwaI-RVpSVberlY6mR7sCUzNtOHxmMXoOSYCQ-Wert6MCrvgGEN9FEEAN_kASSEhFkFz16NKLwm3Fo-fCRdbN23lUro8D6byQhjcGp2t6kVkJXxeGCejE60epjEM7KKMFN2WMe0QukA1Pjvj9JLKpOk_h16FPqJPWvTN8MO4-6dKUkniRw4dzM77lg"
-                      />
-                    </div>
-                    <div
-                      class="bg-white dark:bg-zinc-100 p-4 sm:p-6 md:p-8 flex flex-col min-h-[140px] sm:min-h-[180px]"
-                    >
-                      <div class="flex items-center justify-between mb-3 sm:mb-4">
-                        <h3 class="text-black text-base sm:text-lg md:text-xl font-medium">
-                          Intimate Concerts
-                        </h3>
-                        <span class="material-icons text-black"
-                          >expand_less</span
-                        >
-                      </div>
-                      <p class="text-zinc-700 text-xs sm:text-sm leading-relaxed">
-                        The initiative of digital concerts is our attempt to
-                        democratise music. Intimate concerts offer an
-                        opportunity to brands to reach every customer and build
-                        strong connections.
-                      </p>
-                    </div>
-                  </div>
-                </div>
-              </div> -->
           </section>
 
           <!-- Collaborations Section -->
           <section class="space-y-16 sm:space-y-24 py-8 sm:py-16">
+        
             <div>
               <h2 class="text-xl sm:text-2xl font-light text-slate-700 dark:text-gray-400 mb-6 sm:mb-10 tracking-wide">
-                Bands that battled
-              </h2>
-              <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6 sm:gap-8">
-                <div class="space-y-2 sm:space-y-3">
-                  <div class="aspect-video-p overflow-hidden rounded-sm">
-                    <img alt="Artist Arijit Singh performing on stage with a guitar" class="w-full h-full object-cover"
-                      src="https://static.wixstatic.com/media/69e1d4_f8c0f2027b32408fb614ea5753708398~mv2.jpg/v1/fill/w_924,h_922,q_90,enc_avif,quality_auto/69e1d4_f8c0f2027b32408fb614ea5753708398~mv2.jpg" />
-                  </div>
-                  <p
-                    class="text-[10px] tracking-widest text-right uppercase font-medium text-slate-600 dark:text-white">
-                    TABLE FOR FOUR
-                  </p>
-                </div>
-                <div class="space-y-2 sm:space-y-3">
-                  <div class="aspect-video-p overflow-hidden rounded-sm">
-                    <img alt="Artist Mohit Chauhan singing into a microphone" class="w-full h-full object-cover"
-                      src="https://static.wixstatic.com/media/69e1d4_a8f4611591a14c7294d59668e83dd860~mv2.jpg/v1/fill/w_924,h_922,q_90,enc_avif,quality_auto/69e1d4_a8f4611591a14c7294d59668e83dd860~mv2.jpg" />
-                  </div>
-                  <p
-                    class="text-[10px] tracking-widest text-right uppercase font-medium text-slate-600 dark:text-white">
-                    TABLE FOR FOUR
-                  </p>
-                </div>
-                <div class="space-y-2 sm:space-y-3">
-                  <div class="aspect-video-p overflow-hidden rounded-sm">
-                    <img alt="Artist Shreya Ghoshal singing under blue stage lights" class="w-full h-full object-cover"
-                      src="https://static.wixstatic.com/media/69e1d4_186afee67e1f495aa86762d2461c397e~mv2.jpg/v1/fill/w_948,h_582,q_90,enc_avif,quality_auto/69e1d4_186afee67e1f495aa86762d2461c397e~mv2.jpg" />
-                  </div>
-                  <p
-                    class="text-[10px] tracking-widest text-right uppercase font-medium text-slate-600 dark:text-white">
-                    TABLE FOR FOUR
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div>
-              <h2 class="text-xl sm:text-2xl font-light text-slate-700 dark:text-gray-400 mb-6 sm:mb-10 tracking-wide">
-                Judges and guests
+                Regional artist appearances
               </h2>
               <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6 sm:gap-8">
                 <div class="space-y-2 sm:space-y-3">
@@ -584,7 +492,7 @@
           <section class="space-y-8 sm:space-y-12 py-8 sm:py-16">
             <div class="flex flex-col sm:flex-row justify-between items-start sm:items-center gap-4 mb-6 sm:mb-10">
               <h2 class="text-xl sm:text-2xl md:text-3xl font-bold tracking-tight">
-               Battles and Highlights
+               HIGHLIGHTS
               </h2>
             </div>
 
@@ -596,7 +504,7 @@
                 </div>
                 <div class="p-4 sm:p-6 flex flex-col flex-grow">
                   <h3 class="text-base sm:text-lg font-semibold leading-snug mb-4 sm:mb-6 flex-grow">
-                    Winners season 2: Table for 4
+                    Lifetime achievement award to Wadali brothers
                   </h3>
                   <div class="mt-auto">
                     <button
@@ -615,7 +523,7 @@
                 </div>
                 <div class="p-4 sm:p-6 flex flex-col flex-grow">
                   <h3 class="text-base sm:text-lg font-semibold leading-snug mb-4 sm:mb-6 flex-grow">
-                    Zubin performance on finale season 3
+                    Lifetime achievement award to Wadali brothers
                   </h3>
                   <div class="mt-auto">
                     <button
@@ -634,7 +542,7 @@
                 </div>
                 <div class="p-4 sm:p-6 flex flex-col flex-grow">
                   <h3 class="text-base sm:text-lg font-semibold leading-snug mb-4 sm:mb-6 flex-grow">
-                    Kailash’s Guest appearance : Season 4
+                   Pahadi flute by Pt. Hariprasad Chourasia
                   </h3>
                   <div class="mt-auto">
                     <button
