--- a/aboutus.html
+++ b/aboutus.html
@@ -15,6 +15,7 @@
         rel="stylesheet" />
 
     <script src="https://cdn.tailwindcss.com?plugins=forms,typography,container-queries"></script>
+     <script src="https://kit.fontawesome.com/b70e1ac393.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assest/css/navbar.css">
     <script>
         tailwind.config = {
@@ -179,23 +180,73 @@
 </head>
 
 <body class="bg-background-dark font-display text-white antialiased overflow-x-hidden">
-    <header class="alove-nav-wrapper">
-    <nav class="navbar" id="alove-sticky-nav">
-      <div class="nav-container">
-        <div class="logo">ALIVE <span>INDIA</span></div>
-        <ul class="nav-links">
-          <li><a href="finalll.html" class="active">Home</a></li>
-          <li><a href="aboutus.html">About</a></li>
-          <li><a href="service.html">Services</a></li>
-          <li><a href="#">Gallery</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul>
-        <div class="nav-actions">
-          <a href="#" class="btn-shop">Book Now</a>
+   
+     <nav class="fixed w-full top-0 left-0 z-50 px-6 py-4">
+        <div class="max-w-7xl mx-auto bg-white/10 backdrop-blur-md rounded-full px-8 py-3 shadow-lg border border-white/20">
+            <div class="flex items-center justify-between">
+                
+                <!-- Left Side - Logo -->
+                <div class="flex items-center">
+                    <a href="#" class="text-white font-bold text-2xl">
+                        ALIVE INDIA
+                    </a>
+                </div>
+
+                <!-- Center - Menu Items -->
+                <div class="hidden md:flex items-center gap-8">
+                    <a href="finalll.html" class="text-white text-[18px] font-medium hover:text-blue-300 transition-colors duration-300 relative group">
+                        Home
+                        <span class="absolute -bottom-1 left-0 w-0 h-0.5 bg-blue-300 group-hover:w-full transition-all duration-300"></span>
+                    </a>
+                    <a href="aboutus.html" class="text-white text-[18px] font-medium hover:text-blue-300 transition-colors duration-300 relative group">
+                        About
+                        <span class="absolute -bottom-1 left-0 w-0 h-0.5 bg-blue-300 group-hover:w-full transition-all duration-300"></span>
+                    </a>
+                    <a href="service.html" class="text-white text-[18px] font-medium hover:text-blue-300 transition-colors duration-300 relative group">
+                        Service
+                        <span class="absolute -bottom-1 left-0 w-0 h-0.5 bg-blue-300 group-hover:w-full transition-all duration-300"></span>
+                    </a>
+                    <a href="#" class="text-white text-[18px] font-medium hover:text-blue-300 transition-colors duration-300 relative group">
+                        Gallery
+                        <span class="absolute -bottom-1 left-0 w-0 h-0.5 bg-blue-300 group-hover:w-full transition-all duration-300"></span>
+                    </a>
+                    <a href="#" class="text-white text-[18px] font-medium hover:text-blue-300 transition-colors duration-300 relative group">
+                        Contact
+                        <span class="absolute -bottom-1 left-0 w-0 h-0.5 bg-blue-300 group-hover:w-full transition-all duration-300"></span>
+                    </a>
+                </div>
+
+                <!-- Right Side - Social Media + Contact Button -->
+                <div class="flex items-center gap-4">
+                    <!-- Social Media Icons -->
+                    <div class="hidden md:flex items-center gap-3">
+                        <a href="#" class="w-10 h-10 rounded-full bg-gradient-to-r from-pink-500 to-rose-500 flex items-center justify-center hover:scale-110 transition-transform duration-300">
+                            <i class="fab fa-instagram text-white text-lg"></i>
+                        </a>
+                        <a href="#" class="w-10 h-10 rounded-full bg-gradient-to-r from-red-500 to-orange-500 flex items-center justify-center hover:scale-110 transition-transform duration-300">
+                            <i class="fab fa-youtube text-white text-lg"></i>
+                        </a>
+                        <a href="#" class="w-10 h-10 rounded-full bg-gradient-to-r from-blue-500 to-cyan-500 flex items-center justify-center hover:scale-110 transition-transform duration-300">
+                            <i class="fab fa-linkedin-in text-white text-lg"></i>
+                        </a>
+                        <a href="#" class="w-10 h-10 rounded-full bg-gray-800/70 backdrop-blur-sm flex items-center justify-center hover:scale-110 transition-transform duration-300 border border-white/20">
+                            <i class="fab fa-x-twitter text-white text-lg"></i>
+                        </a>
+                    </div>
+
+                    <!-- Contact Button -->
+                    <a href="#contact" class="bg-blue-600 hover:bg-blue-700 text-white px-6 py-2 rounded-full font-medium transition-all duration-300 shadow-lg hover:shadow-blue-500/50 hover:scale-105">
+                        Contact Us
+                    </a>
+                </div>
+
+                <!-- Mobile Menu Button -->
+                <button class="md:hidden text-white">
+                    <i class="fas fa-bars text-2xl"></i>
+                </button>
+            </div>
         </div>
-      </div>
     </nav>
-  </header>
     <section
         class=" lg:mt-10 relative min-h-[85vh] flex flex-col justify-start overflow-hidden bg-black bg-[url('./about.png')] bg-cover bg-center ">
         <div class="absolute inset-0 pointer-events-none select-none flex justify-around items-start pt-[-10%] z-0 ">
@@ -891,7 +942,7 @@
 
         <section class="px-4 mt-5">
             <div
-                class="relative h-[50vh] overflow-hidden bg-[#FF00B2] rounded-[2rem] md:rounded-[3rem] shadow-2xl flex items-center">
+                class="relative h-[60vh] overflow-hidden bg-[#FF00B2] rounded-[2rem] md:rounded-[3rem] shadow-2xl flex items-center">
 
                 <div class="absolute top-0 right-0 w-1/2 h-full opacity-10 pointer-events-none">
                     <svg class="h-full w-full" viewBox="0 0 400 400" xmlns="http://www.w3.org/2000/svg">
