--- a/finalll.html
+++ b/finalll.html
@@ -27,25 +27,73 @@
 <body>
 
   <!-- NAVBAR -->
-  <header class="alove-nav-wrapper">
-    <nav class="navbar" id="alove-sticky-nav">
-      <div class="nav-container">
-        <div class="logo">ALIVE <span>INDIA</span></div>
-        <!-- <div class="logo">ALIVE <img src="assest/img/logo.png" alt="" style="width: 150px;;"> </div> -->
-        <ul class="nav-links">
-          <li><a href="finalll.html" class="active">Home</a></li>
-          <li><a href="aboutus.html">About</a></li>
-          <li><a href="service.html">Services</a></li>
-          <li><a href="#">Gallery</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul>
-        <div class="nav-actions">
-          <a href="#" class="btn-shop">Book Now</a>
-        </div>
-      </div>
-    </nav>
-  </header>
+   <nav class="fixed w-full top-0 left-0 z-50 px-6 py-4">
+        <div class="max-w-7xl mx-auto bg-white/10 backdrop-blur-md rounded-full px-8 py-3 shadow-lg border border-white/20">
+            <div class="flex items-center justify-between">
+                
+                <!-- Left Side - Logo -->
+                <div class="flex items-center">
+                    <a href="#" class="text-white font-bold text-2xl">
+                        ALIVE INDIA
+                    </a>
+                </div>
 
+                <!-- Center - Menu Items -->
+                <div class="hidden md:flex items-center gap-8">
+                    <a href="finalll.html" class="text-white text-[18px] font-medium hover:text-blue-300 transition-colors duration-300 relative group">
+                        Home
+                        <span class="absolute -bottom-1 left-0 w-0 h-0.5 bg-blue-300 group-hover:w-full transition-all duration-300"></span>
+                    </a>
+                    <a href="aboutus.html" class="text-white text-[18px] font-medium hover:text-blue-300 transition-colors duration-300 relative group">
+                        About
+                        <span class="absolute -bottom-1 left-0 w-0 h-0.5 bg-blue-300 group-hover:w-full transition-all duration-300"></span>
+                    </a>
+                    <a href="service.html" class="text-white text-[18px] font-medium hover:text-blue-300 transition-colors duration-300 relative group">
+                        Service
+                        <span class="absolute -bottom-1 left-0 w-0 h-0.5 bg-blue-300 group-hover:w-full transition-all duration-300"></span>
+                    </a>
+                    <a href="#" class="text-white text-[18px] font-medium hover:text-blue-300 transition-colors duration-300 relative group">
+                        Gallery
+                        <span class="absolute -bottom-1 left-0 w-0 h-0.5 bg-blue-300 group-hover:w-full transition-all duration-300"></span>
+                    </a>
+                    <a href="#" class="text-white text-[18px] font-medium hover:text-blue-300 transition-colors duration-300 relative group">
+                        Contact
+                        <span class="absolute -bottom-1 left-0 w-0 h-0.5 bg-blue-300 group-hover:w-full transition-all duration-300"></span>
+                    </a>
+                </div>
+
+                <!-- Right Side - Social Media + Contact Button -->
+                <div class="flex items-center gap-4">
+                    <!-- Social Media Icons -->
+                    <div class="hidden md:flex items-center gap-3">
+                        <a href="#" class="w-10 h-10 rounded-full bg-gradient-to-r from-pink-500 to-rose-500 flex items-center justify-center hover:scale-110 transition-transform duration-300">
+                            <i class="fab fa-instagram text-white text-lg"></i>
+                        </a>
+                        <a href="#" class="w-10 h-10 rounded-full bg-gradient-to-r from-red-500 to-orange-500 flex items-center justify-center hover:scale-110 transition-transform duration-300">
+                            <i class="fab fa-youtube text-white text-lg"></i>
+                        </a>
+                        <a href="#" class="w-10 h-10 rounded-full bg-gradient-to-r from-blue-500 to-cyan-500 flex items-center justify-center hover:scale-110 transition-transform duration-300">
+                            <i class="fab fa-linkedin-in text-white text-lg"></i>
+                        </a>
+                        <a href="#" class="w-10 h-10 rounded-full bg-gray-800/70 backdrop-blur-sm flex items-center justify-center hover:scale-110 transition-transform duration-300 border border-white/20">
+                            <i class="fab fa-x-twitter text-white text-lg"></i>
+                        </a>
+                    </div>
+
+                    <!-- Contact Button -->
+                    <a href="#contact" class="bg-blue-600 hover:bg-blue-700 text-white px-6 py-2 rounded-full font-medium transition-all duration-300 shadow-lg hover:shadow-blue-500/50 hover:scale-105">
+                        Contact Us
+                    </a>
+                </div>
+
+                <!-- Mobile Menu Button -->
+                <button class="md:hidden text-white">
+                    <i class="fas fa-bars text-2xl"></i>
+                </button>
+            </div>
+        </div>
+    </nav>
+  
   <!-- ========== HERO ========== -->
   <main class="relative h-screen w-full overflow-hidden flex items-center justify-center">
     <div class="absolute inset-0 z-0">
@@ -82,7 +130,7 @@
   </main>
 
   <!-- ========== SERVICES CAROUSEL ========== -->
-  <section style="background-color: #181411;" class="py-20 px-6 md:px-12 lg:px-40 overflow-hidden">
+  <!-- <section style="background-color: #181411;" class="py-20 px-6 md:px-12 lg:px-40 overflow-hidden">
 
     <div class="max-w-[1200px] mx-auto">
       <div class="flex flex-col md:flex-row items-end justify-between gap-6 border-b border-white/10 pb-8">
@@ -187,7 +235,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <!-- ========== SEC1: EYE ANIMATION ========== -->
   <section class="main reel">
@@ -541,6 +589,7 @@
   <!-- end gallery -->
 
   <!-- contact -->
+   
     <div class="socialmain">
  <div class="scroll-progress" id="scrollProgress"></div>
 
@@ -724,6 +773,11 @@
     </div>
   </section>
   <!-- brand -->
+
+ <!-- ANI -->
+   <div id="custom-cursor" class="hidden md:block"></div>
+            <div id="cursor-trails"></div>
+ <!-- ANI -->
 
   <!-- footer -->
      <footer>
@@ -1483,6 +1537,118 @@
   </script>
 
   <!-- contact -->
+
+  <!-- ANI -->
+       <script>
+        (function () {
+            const cursor = document.getElementById('custom-cursor');
+            const trailContainer = document.getElementById('cursor-trails');
+            const trails = [];
+            const trailCount = 8;
+
+            // 1. INJECT REQUIRED CSS FOR PARTICLES
+            if (!document.getElementById('particle-animation-styles')) {
+                const style = document.createElement('style');
+                style.id = 'particle-animation-styles';
+                style.innerHTML = `
+                @keyframes float-particle {
+                    0% { transform: translate(0, 0) scale(1); opacity: 0; }
+                    20% { opacity: 0.7; }
+                    100% { transform: translate(var(--tw-translate-x), var(--tw-translate-y)) scale(0); opacity: 0; }
+                }
+                .cursor-trail {
+                    width: 8px;
+                    height: 8px;
+                    background: #ec4899;
+                    border-radius: 50%;
+                    position: fixed;
+                    pointer-events: none;
+                    z-index: 9998;
+                    filter: blur(4px);
+                }
+                #custom-cursor {
+                    width: 20px;
+                    height: 20px;
+                    background: white;
+                    border-radius: 50%;
+                    position: fixed;
+                    pointer-events: none;
+                    z-index: 9999;
+                    mix-blend-mode: difference;
+                }
+            `;
+                document.head.appendChild(style);
+            }
+
+            // 2. Initialize Trails
+            for (let i = 0; i < trailCount; i++) {
+                const t = document.createElement('div');
+                t.className = 'cursor-trail';
+                trailContainer.appendChild(t);
+                trails.push({ el: t, x: 0, y: 0 });
+            }
+
+            let mouseX = 0;
+            let mouseY = 0;
+
+            window.addEventListener('mousemove', (e) => {
+                mouseX = e.clientX;
+                mouseY = e.clientY;
+                if (cursor) {
+                    cursor.style.transform = `translate(${mouseX - 10}px, ${mouseY - 10}px)`;
+                }
+            });
+
+            // 3. Smooth Trail Animation
+            function animate() {
+                trails.forEach((trail, index) => {
+                    const nextTrail = trails[index + 1] || { x: mouseX, y: mouseY };
+                    trail.x += (nextTrail.x - trail.x) * 0.35;
+                    trail.y += (nextTrail.y - trail.y) * 0.35;
+                    trail.el.style.transform = `translate(${trail.x - 4}px, ${trail.y - 4}px)`;
+                    trail.el.style.opacity = 1 - (index / trailCount);
+                    trail.el.style.scale = 1 - (index / trailCount);
+                });
+                requestAnimationFrame(animate);
+            }
+            animate();
+
+            // 4. PARTICLE/BUBBLE LOGIC (The "Pulse" effect)
+            setInterval(() => {
+                if (mouseX > 0) {
+                    const p = document.createElement('div');
+                    const isNote = Math.random() > 0.7;
+
+                    // Styling the particle
+                    p.className = 'fixed pointer-events-none z-[9997]';
+                    p.style.left = mouseX + 'px';
+                    p.style.top = mouseY + 'px';
+                    p.style.color = '#ec4899'; // Pink color
+
+                    if (isNote) {
+                        p.innerHTML = '<span class="material-symbols-outlined" style="font-size: 100px;"></span>';
+                    } else {
+                        // This creates the "Bubble" or Circle
+                        p.innerHTML = '<div style="width: 6px; height: 6px; background: white; border-radius: 50%; box-shadow: 0 0 10px #ec4899;"></div>';
+                    }
+
+                    // Random Scatter Direction
+                    const tx = (Math.random() - 0.5) * 120; // 120px spread
+                    const ty = (Math.random() - 0.5) * 120;
+
+                    p.style.setProperty('--tw-translate-x', `${tx}px`);
+                    p.style.setProperty('--tw-translate-y', `${ty}px`);
+                    p.style.animation = 'float-particle 1.2s ease-out forwards';
+
+                    document.body.appendChild(p);
+
+                    // Clean up memory
+                    setTimeout(() => p.remove(), 1200);
+                }
+            }, 100); // Create bubble every 100ms
+        })();
+    </script>
+  <!-- ANI -->
   
 
 </body>
